lots of progress

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,5 +1,10 @@
 ---
 title: Home
 ---
+<div class="position-relative text-white" style="min-height:600px">
+    <img src="/img/banners/screen print.jpg" class="bg-cover">
 
-jeeted
+    <div class="container position-relative py-5" style="top:100px;">
+        <h1 class="display-1 bg-secondary-90 d-inline">Merch coming soon!</h1>
+    </div>
+</div>
